--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,14 @@
             <version>2.12.3</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/io.rest-assured/rest-assured -->
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>3.1.0</version>
+            <scope>test</scope>
+        </dependency>
+
 
 
     </dependencies>
